@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2025, Oracle and/or its affiliates.
+ * Copyright (c) 2000, 2026, Oracle and/or its affiliates.
  *
  * Licensed under the Universal Permissive License v 1.0 as shown at
  * https://oss.oracle.com/licenses/upl.
@@ -43,6 +43,8 @@ import com.tangosol.io.WrapperObjectOutputStream;
 import com.tangosol.io.WrapperOutputStream;
 import com.tangosol.io.WriteBuffer;
 import com.tangosol.io.WriteBuffer.BufferOutput;
+import com.tangosol.io.internal.DefaultObjectInputFilter;
+import com.tangosol.io.internal.SerializationTelemetry;
 
 import com.tangosol.io.pof.ConfigurablePofContext;
 import com.tangosol.io.pof.PofContext;
@@ -2411,10 +2413,13 @@ public abstract class ExternalizableHelper
         else
             {
             // instantiate the object
+            ensureDefaultObjectInputFilter(in);
             String sClass = readUTF(in);
             try
                 {
-                value = (XmlSerializable) loadClass(sClass, loader, null).newInstance();
+                Class<?> clz = loadClass(sClass, loader, null);
+                validateLoadClass(clz, in);
+                value = (XmlSerializable) clz.getDeclaredConstructor().newInstance();
                 }
             catch (Exception e)
                 {
@@ -2501,6 +2506,7 @@ public abstract class ExternalizableHelper
         else
             {
             // instantiate the object
+            ensureDefaultObjectInputFilter(in);
             String sClass = readUTF(in);
 
             WrapperDataInputStream inWrapper = in instanceof WrapperDataInputStream
@@ -2569,8 +2575,10 @@ public abstract class ExternalizableHelper
     protected static void validateLoadClass(Class clz, DataInput in)
             throws InvalidClassException
         {
+        ensureDefaultObjectInputFilter(in);
         if (!checkObjectInputFilter(clz, in))
             {
+            SerializationTelemetry.recordFilterCheck("rejected", "class-rejected", clz, null);
             throw new InvalidClassException("Deserialization of class " + clz.getName() + " was rejected");
             }
         }
@@ -2589,8 +2597,10 @@ public abstract class ExternalizableHelper
     public static void validateLoadArray(Class clz, int cLength, DataInput in)
             throws InvalidClassException
         {
+        ensureDefaultObjectInputFilter(in);
         if (!checkObjectInputFilter(clz, cLength, in))
             {
+            SerializationTelemetry.recordFilterCheck("rejected", "array-rejected", clz, null);
             throw new InvalidClassException("Deserialization of class " + clz.getName() + " with array length " + cLength + " was rejected");
             }
         }
@@ -2647,6 +2657,7 @@ public abstract class ExternalizableHelper
                 }
             else
                 {
+                ensureDefaultObjectInputFilter(in);
                 try
                     {
                     Class clz = XMLBEAN_CLASS_CACHE.getClass(nBeanId, loader);
@@ -2745,6 +2756,7 @@ public abstract class ExternalizableHelper
             }
         else
             {
+            ensureDefaultObjectInputFilter(in);
             // read the object; theoretically speaking only the following
             // exceptions are thrown:
             //
@@ -2852,6 +2864,7 @@ public abstract class ExternalizableHelper
             return (T) ((PofInputStream) in).readObject();
             }
 
+        ensureDefaultObjectInputFilter(in);
         Object o = readObjectInternal(in, in.readUnsignedByte(), loader);
         return (T) safeRealize(o, ensureSerializer(loader), in);
         }
@@ -2899,6 +2912,7 @@ public abstract class ExternalizableHelper
         switch (nType)
             {
             default:
+                SerializationTelemetry.recordFmtCheck("rejected", "invalid-format", nType);
                 throw new StreamCorruptedException("invalid type: " + nType);
 
             case FMT_UNKNOWN:
@@ -3486,6 +3500,7 @@ public abstract class ExternalizableHelper
             in = supplierBufferIn.apply(in);
             }
 
+        ensureDefaultObjectInputFilter(in);
         Object o = nType == FMT_EXT
                    ? serializer.deserialize(in, clazz)
                    : readObjectInternal(in, nType,
@@ -5781,7 +5796,7 @@ public abstract class ExternalizableHelper
             loader = ensureClassLoader(loader == null && in instanceof WrapperDataInputStream
                          ? ((WrapperDataInputStream) in).getClassLoader()
                          : loader);
-            return new ResolvingObjectInputStream(stream, RemotableSupport.get(loader));
+            return newFilteredObjectInputStream(stream, loader);
 
             }
 
@@ -5816,6 +5831,44 @@ public abstract class ExternalizableHelper
             }
         }
 
+
+    /**
+     * Construct an ObjectInputStream with Coherence's default filter attached.
+     *
+     * @param stream  the stream to read from
+     * @param loader  the class loader to use
+     *
+     * @return a filtered ObjectInputStream
+     *
+     * @throws IOException if an I/O exception occurs
+     */
+    public static ObjectInputStream newFilteredObjectInputStream(InputStream stream, ClassLoader loader)
+            throws IOException
+        {
+        ObjectInputStream ois = new ResolvingObjectInputStream(stream,
+                RemotableSupport.get(ensureClassLoader(loader)));
+        ois.setObjectInputFilter(DefaultObjectInputFilter.create());
+        return ois;
+        }
+
+    /**
+     * Attach Coherence's default ObjectInputFilter to a BufferInput.
+     *
+     * @param in  the input to update
+     */
+    private static void ensureDefaultObjectInputFilter(DataInput in)
+        {
+        if (in instanceof BufferInput)
+            {
+            try
+                {
+                ((BufferInput) in).setObjectInputFilter(DefaultObjectInputFilter.create());
+                }
+            catch (IllegalStateException ignored)
+                {
+                }
+            }
+        }
 
     // ----- Expiry-decoration helpers --------------------------------------
 
@@ -6222,7 +6275,11 @@ public abstract class ExternalizableHelper
             {
             if (oFilter == null)
                 {
-                return true;
+                if (in instanceof ObjectInputStream)
+                    {
+                    return false;
+                    }
+                oFilter = DefaultObjectInputFilter.create();
                 }
 
             DynamicFilterInfo dynamic = s_tloHandler.get();
